--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "@types/d3-ease": "^3.0.2",
     "@types/d3-zoom": "^3.0.8",
     "@use-gesture/react": "^10.3.1",
+    "@visx/group": "^3.12.0",
+    "@visx/point": "^3.12.0",
+    "@visx/responsive": "^3.12.0",
+    "@visx/scale": "^3.12.0",
+    "@visx/shape": "^3.12.0",
+    "@visx/text": "^3.12.0",
+    "@visx/tooltip": "^3.12.0",
     "framer-motion": "^11.14.4",
     "glob": "^11.0.0",
     "next": "15.1.0",
