--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-brands-svg-icons": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@opentelemetry/api-logs": "^0.57.0",
+    "@opentelemetry/instrumentation": "^0.57.0",
+    "@opentelemetry/sdk-logs": "^0.57.0",
     "@types/d3": "^7.4.3",
     "@types/d3-ease": "^3.0.2",
     "@types/d3-zoom": "^3.0.8",
     "@use-gesture/react": "^10.3.1",
+    "@vercel/otel": "^1.10.0",
     "@visx/group": "^3.12.0",
     "@visx/point": "^3.12.0",
     "@visx/responsive": "^3.12.0",
@@ -24,7 +28,7 @@
     "@visx/shape": "^3.12.0",
     "@visx/text": "^3.12.0",
     "@visx/tooltip": "^3.12.0",
-    "framer-motion": "^11.14.4",
+    "framer-motion": "^11.15.0",
     "glob": "^11.0.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
@@ -37,12 +41,12 @@
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.0.2",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
